fix(ClusterPage): align "Loading <cluster name>..." text to center of the page

--- a/packages/ui/src/ui/containers/ClusterPage/ClusterPage.scss
+++ b/packages/ui/src/ui/containers/ClusterPage/ClusterPage.scss
@@ -48,4 +48,8 @@
         margin-top: 60px;
         margin-bottom: 60px;
     }
+
+    &__loading-text {
+        text-align: center;
+    }
 }
